# ds_library-Nilesh

./: CMakeList.txt  CMakeLists.txt  built_log.md  main.cpp  nilesh_design_proposal.md  test.cpp
Daily_journal/: 23-june-2026.md
Implementation/DynamicArray/: DynamicArray.h  DynamicArray.tpp  main.cpp
Implementation/LinkedList/: LinkedList.h  LinkedList.tpp  main.cpp
docs/Daily_journal/: 01-july-2026.md  21-june-2026.md  22-june-2026.md  24-june-2026.md  29-june-2026.md  30-june-2026.md
docs/Design_proposal/: First_design_proposal_v1.md  nilesh_design_proposal.md
docs/Design_proposal/DynamicArray/: DynamicArray_v2.md  DynamicArray_v3.md
docs/Design_proposal/HashMap/: HashMap_v2.md  HashMap_v3.md
docs/Design_proposal/LinkedList/: LinkedList_v2.md  LinkedList_v3.md
docs/buildlogs/: 01-july-session-1.md  01-july-session-2.md  22-june-session-1.md  23-june-session-1.md  23-june-session-2.md  23-june-session-3.md  24-june-session-1.md  24-june-session-2.md  24-june-session-3.md  25-june-session-1.md  29-june-session-2.md  30-june-session-1.md  30-june-session-2.md  30-june-session-3.md  built_log.md
include/: DynamicArray.h  HashMap.h  LinkedList.h  MyHash.h
src/DynamicArray/: DynamicArray.h  DynamicArray.tpp
src/HashMap/: HashMap.h  HashMap.tpp  MyHash.h  main.cpp
src/LinkedList/: LinkedList.h  LinkedList.tpp
src/Redis-lite/: Redis-lite.tpp
tests/DynamicArray/: CapacityTests.cpp  ClearTests.cpp  ConstructorTests.cpp  CopyAssignmentTests.cpp  CopyConstructorTests.cpp  InsertTests.cpp  PopBackTests.cpp  PushBackTests.cpp  RemoveTests.cpp  SizeTests.cpp
tests/LinkedList/: AppendTests.cpp  AssignmentOperatorTests.cpp  ClearTests.cpp  EqualityOperatorTests.cpp  ExistsTests.cpp  InsertHeadTests.cpp  InsertTests.cpp  LengthTests.cpp  PopTests.cpp  RemoveTests.cpp  ReverseTests.cpp
